--- a/almacen_app/templates/login.html
+++ b/almacen_app/templates/login.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="static/css/styles.css">
   <!-- Vincular archivo JavaScript externo -->
   <script src="/static/js/f_login.js"></script>
-  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/456/456112.png" type="image/x-icon">
+  <link rel="icon" href="../static/img/login.png" type="image/x-icon">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
   
 </head>
