--- a/almacen_app/templates/registrar_productos.html
+++ b/almacen_app/templates/registrar_productos.html
@@ -9,7 +9,7 @@
     <link rel="preload" href="/static/css/styles3.css">
     <link rel="stylesheet" type="text/css" href="/static/css/styles3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="icon" href="/static/img/report_icon.png" type="image/x-icon">
+    <link rel="icon" href="/static/img/registro.png" type="image/x-icon">
 </head>
 <body>
     <h1>Registrar Producto</h1>
