--- a/almacen_app/templates/registro_persona.html
+++ b/almacen_app/templates/registro_persona.html
@@ -8,6 +8,7 @@
     <link rel="preload" href="/static/css/normalize.css" as="style">
     <link rel="preload" href="/static/css/styles5.css">
     <link rel="stylesheet" type="text/css" href="/static/css/styles5.css">
+    <link rel="icon" href="../static/img/person.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
