--- a/almacen_app/templates/welcome.html
+++ b/almacen_app/templates/welcome.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="/static/css/styles2.css">
     <!-- Vincular archivo JavaScript externo 
     <script src="/static/js/f_login.js"></script>-->
-    <link rel="icon" href="/static/img/checklist.png" type="image/x-icon">
+    <link rel="icon" href="/static/img/inventario.png" type="image/x-icon">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
 </head>
 
