--- a/almacen_app/static/css/styles.css
+++ b/almacen_app/static/css/styles.css
@@ -19,7 +19,6 @@ body {
   width: 100%;
   height: 100%;
   backdrop-filter: blur(4px); /* Aplica el desenfoque a la capa */
-
 }
 /* Estilos para el contenedor principal */
 .container {
@@ -58,7 +57,6 @@ body {
 .image img:hover {
   transform: scale(1.1); /* Aumenta ligeramente el tamaño de la imagen */
 }
-
 
 /* Estilos para el saludo */
 .saludo {
@@ -187,8 +185,8 @@ input {
   margin: 0; /* Elimina todos los márgenes del checkbox */
   transform: scale(1); /* Aumenta el tamaño del checkbox */
   cursor: pointer; /* Cambia el cursor al pasar sobre el checkbox */
-
 }
+
 .remember-checkbox input[type="checkbox"]:checked {
   background-color: #007bff; /* Cambia el color de fondo cuando está seleccionado */
   border-color: #007bff; /* Cambia el color del borde cuando está seleccionado */
@@ -199,4 +197,79 @@ input {
   color: red;
   font-size: 14px;
   margin-top: 10px;
+}
+
+/* Media query para pantallas pequeñas */
+@media (max-width: 768px) {
+  .container {
+    width: 90%;
+    padding: 20px;
+    border-radius: 20px;
+  }
+
+  .image {
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -20%);
+  }
+
+  .image img {
+    width: 60px;
+    height: 60px;
+  }
+
+  .saludo {
+    font-size: 18px;
+    top: -40px;
+  }
+
+  .login-form {
+    width: 100%;
+    padding: 10px;
+  }
+
+  h2 {
+    font-size: 20px;
+  }
+
+  label {
+    font-size: 14px;
+  }
+
+  input {
+    width: calc(100% - 20px);
+    padding: 8px;
+    font-size: 14px;
+  }
+
+  .button {
+    padding: 8px 15px;
+    font-size: 14px;
+  }
+
+  .button-group {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .button-group .button, .button-group .cancel {
+    margin: 5px 0;
+  }
+
+  .remember-checkbox {
+    flex-direction: column;
+    align-items: center;
+    margin-right: 0;
+  }
+
+  .remember-checkbox label {
+    margin-right: 0;
+    margin-top: 10px;
+    font-size: 14px;
+  }
+
+  .remember-checkbox input[type="checkbox"] {
+    margin: 10px 0;
+    transform: scale(1.2);
+  }
 }
