--- a/almacen_app/static/css/styles7.css
+++ b/almacen_app/static/css/styles7.css
@@ -71,7 +71,6 @@ button {
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
-
 button.reporte {
     background-color: #2c82c9;
 }
@@ -89,7 +88,6 @@ button i {
 }
 
 button:hover {
-
     transform: translateY(-3px);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
@@ -202,4 +200,36 @@ td {
 .tabla-solicitud td {
     background-color: #fff;
     color: #333;
+}
+
+/* Media query para pantallas pequeñas */
+@media (max-width: 768px) {
+    body {
+        flex-direction: column;
+        height: auto;
+        padding: 20px;
+    }
+
+    h1 {
+        font-size: 20px;
+        top: 20px;
+    }
+
+    .container {
+        width: 90%;
+        padding: 10px;
+    }
+
+    .button-container {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    button {
+        width: 100%;
+    }
+
+    .formulario-container {
+        flex-direction: column;
+    }
 }
